// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumerAreaInput components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
      },
      Object {
        "alignItems": "center",
        "height": 60,
        "justifyContent": "center",
        "lineHeight": 60,
        "width": 100,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    clearTextOnFocus={true}
    key="test"
    keyboardType="numeric"
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onFocus={[Function]}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "color": "rgba(103, 112, 123, 1)",
          "fontSize": 30,
          "height": 30,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "100%",
        },
        null,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`NumerAreaInput components render change 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
      },
      Object {
        "alignItems": "center",
        "height": 60,
        "justifyContent": "center",
        "lineHeight": 60,
        "width": 100,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    clearTextOnFocus={true}
    key="test"
    keyboardType="numeric"
    maxVal="10"
    minVal="5"
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onFocus={[Function]}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "color": "rgba(103, 112, 123, 1)",
          "fontSize": 30,
          "height": 30,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "100%",
        },
        null,
      ]
    }
    underlineColorAndroid="transparent"
    value="20"
  />
</View>
`;

exports[`NumerAreaInput components render focus 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "red",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginTop": 20,
      },
      Object {
        "alignItems": "center",
        "height": 60,
        "justifyContent": "center",
        "lineHeight": 60,
        "width": 100,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    clearTextOnFocus={true}
    editable={true}
    key="test"
    keyboardType="numeric"
    maxVal={30}
    minVal={5}
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="6"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "color": "rgba(103, 112, 123, 1)",
          "fontSize": 30,
          "height": 30,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "100%",
        },
        null,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;
